Review Alignment issue at bliss theme

--- a/packages/Webkul/Shop/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Shop/src/Resources/assets/sass/app.scss
@@ -3402,7 +3402,6 @@ section.review {
                 .product-name,
                 .product-price {
                     max-width: 280px;
-                    margin-left: auto;
                     margin-right: auto;
                     word-break: break-all;
                 }
